@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST slop-2.4.4.tgz 20420 SHA256 b5600dd1c63140d3b73a47695f1e1839ec992b77f16439c6ec0cdda84a9898c5 SHA512 3de90505f3091b6ec3c323e2b2562a5945e78b0ca46443a7a327c47f9efae4cd9deb09c1ff349eeaa399817fb5df0840e5e72229a2222deebb9a0473da02cccb WHIRLPOOL 28457e1c4ccb824404f5a97593f9fc8c132f63b55f29f932044e53669ad0c290d5524bf47f58d309eafdd0cb9b741a7c63d9e706dcf81d12df3c53297554ab7c
 DIST slop-3.5.0.tgz 19391 SHA256 3df908099319c6122780f035150a439cf1291af5b6841e99f28b8ba15283185e SHA512 d4e4feb86890fa8a3eab32984407f231f9e337bfc52ee2fa3a6b75e627a07e4d45a4c97f16a048595b4ac14a32e12b76495e2d1bf3885f9421d0e45e08fe3620 WHIRLPOOL e287031e4f1f298c21f75a519e9027109875a4811f0f2492631398f9e8ab06bec8024dd11ca5be427f90a724c077ae39e275d6ae2a58a5bcca90099db5b97fbd
+DIST slop-3.6.0.tgz 19570 SHA256 8fdb0e81e0636f7a266b5f12e1fa419c27bf1b529f0c48addaaa9b02bcccf1ca SHA512 48bc2f56070a6f65b865b76dd5ba2e0e434c2ac5f9efef89301833746c0d01e5d9769ae02cdff8a4cfb0ed67d4306d921eafe086f49dafa0af8521d14bcee2a6 WHIRLPOOL c33dfb201a24c07e3abc56fa5c0944caff55814ac42d462e607a63c7d60e7fb02ba80accd020f572331c0bd9abd823446538e81b8039fdf5bab6bfa26d24e5d4
 EBUILD slop-2.4.4-r1.ebuild 671 SHA256 9a23105f07cc34f2af18f59747463d6ac42df8dc62ceab0f4408a0db70bf0cc5 SHA512 93bef9a96d801f1324c2d7192fdac2c221262449f8b2bcc82eca00b4b529581a558adc6eda918354a69ad16c16dc0ab2ebf84bcbfed9637dcb43196f1415be4b WHIRLPOOL 193d8ff8bbb3d5e77cd482b9f1ce0c4d2e72306de996a5aa05cbb4251786a01c9bab5d0da95b7f58c7f5e6be0519651bd8b30d54b9ab621c84cade2e8f6a9581
 EBUILD slop-3.5.0-r1.ebuild 743 SHA256 d291899770ac970f945db9bcd97b6252395ad0952a5ca792317f76eedd2cc268 SHA512 92c2013bdc5776a97206939b2785ff4e237283645490635ff3861e6356815af14c736570049526579a89936805ed21447f90deb7ae7923033a21e3478856a634 WHIRLPOOL e46388359f689aacc4dc5e6542a05a4cee2b9b285641f84ba18e3f3853a244fa2d7b88731c182bf6c47e95fab20b16ed42fc64970b5730fffbf65e4c97e925a5
 EBUILD slop-3.5.0.ebuild 733 SHA256 988a728033d68d6c4524d11063f3d3868cd9fc813d7944878df5eadf2796f358 SHA512 f3247d61c63e085126375573c354532c492e27bf35ef1decb5e11fe5b0f13308c2e32bb53829d5cd822750be527e3c3f08f23582fde48029659cc3e6561f953e WHIRLPOOL 6578eada0ad7b57f18c7da1ff466f51cd693e69f603affe26ef5e93122a34478ccd79919424341063a294eb58e8ed9b9e88baf37b5d6af99573f5214b1246a90
-MISC ChangeLog 3677 SHA256 63f007894d1926a950f2dc60cef3f280f9c8bb55eaeb93a8aef96e24f84c6560 SHA512 13a73aea5091fea7318c24ab79d5fbd16804662c2d8d16dca40fccb44d69d97bec24a39bdeeadaefa2dbadde1f6aa08a62ea629e68c745a0aa9ad5e7237b8fb8 WHIRLPOOL c976389c7fe1cb919f63b854f66836b7def2d641cd3124f15bcdc4e6281550d968d2f02e07aa0662ae0ad51e9f5b9fded2aed8d18e390606a3c0331df53e19d9
+EBUILD slop-3.6.0.ebuild 741 SHA256 86516c7441f17c8361312e41f906cbf8564315a1048a7ef071531e1b5a97238e SHA512 98c2c7b9a978965189a740678b66ac80c15f7002c1e7162fbaf925c2a3e3d073702c56c932ad5cd0f749f4a9faf08c36bf12251022da319d1281afafd766349c WHIRLPOOL 72e53edea6e00e8d4573862e87c21f5893e2fb0eb2e4afc812b07dd5a3fb57f42c213f3460a94d000a7fc223785bb2415e9fdbdf12e87e86729d82ac4f951a46
+MISC ChangeLog 3792 SHA256 9416e6ce243cc6accaf14d3441515b8310f8f79d378ee6d8620fe30358b14d2a SHA512 e95b0559106011fa9d7e0468d2a115e661d0ed9145a9a34f6bb2bfca37c8dbb627db0f677ef6c1a3357cd420ab0905defc5e3285459e2b52202d82f41ce911c4 WHIRLPOOL 962e4919ebe76589cd35a20efd3f62f908487db765831fee4ad4bc860ddc1a7b6817889f6bd77a3572db11ade34c512a2c1880c51fff2ffa80dec262e805a0bc
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlPnD74ACgkQiIP6VqMIqNe0swD/W8p5rqwCYSwCEi+Q2wZONX+s
+amMZU+NVUa8SLVgF2SYA/RoeIbFIunriKxAOv/Yi3XRDN8hs2r2kwiSZjKmB1575
+=Ch0F
+-----END PGP SIGNATURE-----
